--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="https://t.me/Amir_kanz" class="item">
             <img src="https://i.postimg.cc/qtp3HKLF/telegram.png" alt="" width="80%">
         </a>
-        <a href="https://www.google.com/maps/place/Loya_scarf/@35.7135075,51.4991113,20z/data=!4m9!1m2!2m1!1z2KrZh9ix2KfZhiDYqtmH2LHYp9mGINmG2Ygg2YHZhNqp2Ycg2KfYt9mE2KfYudin2Kog2qnZiNqG2Ycg2LPZhtin24zbjA!3m5!1s0x3f8e03005e4e5429:0x46085e00d3c4802f!8m2!3d35.7135364!4d51.4993006!16s%2Fg%2F11wjdflf9t?entry=ttu&g_ep=EgoyMDI1MDIwNS4xIKXMDSoASAFQAw%3D%3D" class="item">
+        <a href="https://maps.app.goo.gl/PF7X+CP7 Tehran Now, Tehran, Tehran Province" class="item">
             <img src="https://i.postimg.cc/Nybrs0Cj/location.png" alt="" width="80%">
         </a>
         <a href="tel:09389875101" class="item">
