--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="https://t.me/Amir_kanz" class="item">
             <img src="https://i.postimg.cc/qtp3HKLF/telegram.png" alt="" width="80%">
         </a>
-        <a href="https://maps.app.goo.gl/LNNWrBsJLCtLZFzS9" class="item">
+        <a href="https://neshan.org/maps/places/22723da6e4cba95f92263d08c61414f5#c35.714-51.504-15z-0p" class="item">
             <img src="https://i.postimg.cc/Nybrs0Cj/location.png" alt="" width="80%">
         </a>
         <a href="tel:09389875101" class="item">
