--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="https://t.me/Amir_kanz" class="item">
             <img src="https://i.postimg.cc/qtp3HKLF/telegram.png" alt="" width="80%">
         </a>
-        <a href="https://neshan.org/maps/places/_bvHFZ5xpdOd#c35.714-51.499-19z-0p" class="item">
+        <a href="https://maps.app.goo.gl/2ykyxDofyfLdSYYH7" class="item">
             <img src="https://i.postimg.cc/Nybrs0Cj/location.png" alt="" width="80%">
         </a>
         <a href="tel:09389875101" class="item">
